--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@arc-components/file-reader",
+  "name": "@advanced-rest-client/file-reader",
   "description": "An element that reads files.",
-  "version": "2.0.0-preview",
+  "version": "2.0.0",
   "license": "Apache-2.0",
   "main": "file-reader.html",
   "authors": [
