--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ node_js: stable
 sudo: required
 before_script:
 - npm install -g polymer-cli
-- npm install -g bower
 - polymer install --variants
 addons:
   firefox: latest
@@ -15,7 +14,7 @@ addons:
   sauce_connect: true
 script:
 - npm run lint
-- xvfb-run polymer test polymer test --plugin local
+- xvfb-run polymer test --plugin local
 - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then polymer test --plugin sauce --job-name
   "api-body-document:${TRAVIS_BRANCH}" --build-number=${TRAVIS_BUILD_NUMBER}; fi
 cache:
